# controllers/player_total_controller.go
@@ -57,7 +57,7 @@ func ScrapePlayerTotalStats(db *gorm.DB) fiber.Handler {
 }
 
 // GetPlayerTotalStats godoc
-// @Security ApiKeyAuth
+// //@Security ApiKeyAuth
 // @Summary Get player total stats
 // @Description Filter and paginate player totals
 // @Tags PlayerTotals
